--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  max-width: 1150px;
+  max-width: 1400px;
   font-size: 16px;
   font-family: "Roboto", sans-serif;
 }
@@ -122,6 +122,11 @@ a:hover {
 
 .plain-text {
   padding-right: 5%;
+  padding-left: 2%;
+}
+
+.indent {
+  padding-left: 5%;
 }
 
 .left-side-title {
@@ -134,14 +139,14 @@ a:hover {
 
 .education-content {
   display: flex;
-  justify-content: space-between;
+  
 }
 
-.qualification {
-  margin-left: 3em;
+.title-name {
+  margin-left: 2em;
 }
 
-.qualification > div {
+.title-name > div {
   margin-bottom: 0.7em;
 }
 
@@ -206,6 +211,12 @@ a:hover {
 .plain-list  > li {
   list-style-type: disc ;
   margin: 0.5em auto;
+}
+
+.college {
+  width: 20%;
+  font-size: 0.8em;
+  
 }
 
 
