refactor: add more adaptive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,9 +61,9 @@ a:hover {
 }
 
 .container {
-  padding: 20px 15px;
+  padding: 0.5em ;
   width: 75%;
-  margin: 2em auto;
+  margin: 1em;
   box-shadow: 0 0 45px #888888;
 }
 
