--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ a:hover {
 .container {
   padding: 0.5em ;
   width: 75%;
-  margin: 1em;
+  margin: 1em auto;
   box-shadow: 0 0 45px #888888;
 }
 
