--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@ a:active {
 a:hover {
   color: palevioletred;
 }
+
 .title-line {
   width: 85%;
   height: 2px;
@@ -170,8 +171,10 @@ a:hover {
 }
 
 .list-projects > figure {
-  margin-top: 1.5em;
+  display: block;
+  margin: 0.5em 0.2em;
   text-align: center;
+  width: 150px;
 }
 
 
